style.css
body {
	color:#eee;
	margin:0px;
	padding:0px;
	font:normal 14px/17px Arial, Helvetica, sans-serif; 
	background-color:#373737;
	height:100%; }

#wrapper {
	min-height:100%;
	position:relative; }
	
h1 {
  	margin:0; 
  	font-size:40px; 
  	line-height:40px; 
  	font-weight:bold; }

h2 {
	margin-top:20px;
	font-size:30px;
	line-height: 30px;} 
	
h3 {	
	color:#FFD700; }	
	
h4 {
	color:#F0D855; } 	

p {
	margin-left:auto;
	margin-right:auto;
	margin-top:0px;
	margin-bottom:10px; }

a:link {
        color:#57A3E8;
        text-decoration:none; }

a:visited {
        color:#57A3E8;
        text-decoration:none; }

a:hover {
        color:#429ED7; }
        
.blog-link {
	color:#eee !important; }

header {
	padding-top:10px;
	min-height:50px;
	margin-left:7px;
	margin-right:7px;
	border-bottom:1px solid #666; }

#siteheader {
	padding-left:45px;
	margin-bottom:0px;
	height:45px;
	color:#eee; }
	
@media (max-width:500px) {
   #siteheader {
	padding-left:0px;
	text-align:center;
	margin-left: -50px;
   }
}

.sitelinks {
	padding-left:40px;
	line-height:43px;
	height:43px;
	color:#eee; }

.sitelinks a {
	padding-right:2.5%; }

@media (max-width:500px) {
   .sitelinks {
	padding-left:0px;
	text-align:center;
   }
}

.currentpage {
	font-weight:bold;
	text-shadow: 0px 0px 10px #57A3E8; }

.links {
	height:80;
	float:right;
	padding-right:20px; }

@media (max-width:500px) {
   .links {
	float:none;
	text-align:center;
   }
}

.link-img {
	padding-top:1px;
	padding-right:5px;
	padding-bottom:2px;
	fill:#eee; }

.link-img:hover {
  	opacity:0.7; }

section {
	padding-bottom:55px; }

#coverpicture {
	width:100%;
	height:400px; }
	
.col2 {
	column-count:2;
	-webkit-column-count:2;
	-moz-column-count:2; }

.page-content {
	margin-top:14px;
	width:93%;
	height:100%;
	margin-left:auto;
	margin-right:auto;
	padding:10px; }

footer {
	border-top:1px solid #666;
	height:30px;
	width:100%;
	position:absolute;
	bottom:0;
	left:0; }

footer p {
	text-align:right; 
	font-size:10px;
	height:20px;
	margin-left:25px;
	margin-right:25px;
	margin-bottom:5px;
	margin-top:5px; }
	
.resume-head {
	color:#FFD700;
	text-align:right;
	margin-bottom:5px; }
	
.resume-head-info {
	text-align:right;
	margin-bottom:0px !important; }
	
.resume-date {
	float:right; }
	
.resume-title {
	 font-style: italic; }
	 
.resume-sub {
	margin-bottom:3px; }
	 
.highlight {
	color:#F0D855; }
	
.highlight-point {
	color:#F0D855;
	margin-top:14px; 
	margin-bottom:0px !important; }

.highlight-ul {
	margin-top:1px; }
	
.snapshot {
	font-family:Helvetica,Arial,sans-serif;
	background-color:#FF6666;
	height:23px;
	line-height:23px;
	text-align:center;
	font-weight:bold;
	font-size:12px;
	color:#333; }

div.snapshot a, div.snapshot a:link, div.snapshot a:visited {
	color: #3366cc; }
	
.mirror {
	font-size:12px; }
	
.centre {
	text-align:center; }

.blog-heading {
	margin-bottom:0px; }
	
.blog-meta {
	text-align:right;
	margin-bottom:20px; }

#chevron {
	float:right;
	margin:0px; }

.blog-image-centre {
	margin-left: auto;
	margin-right: auto;
	margin-top: 15px;
	margin-bottom: 15px;
	width: 55%;
	padding: 3px;
	text-align: center;
	font-size: 90%; }

.blog-image-left-port {
	float: left;
	margin-right:15px;
	margin-bottom:5px;
	padding:3px;
	text-align:left;
	font-size:90%;
	max-width:200px; }

.blog-image-left-land {
	float: left;
	margin-right:15px;
	margin-bottom:5px;
	padding:3px;
	text-align:left;
	font-size:90%;
	max-width:310px; }

.blog-image-right-port {
	float: right;
	margin-left:15px;
	margin-bottom:5px;
	padding:3px;
	text-align:right;
	font-size:90%;
	max-width:200px; }

.blog-image-right-land {
	float: right;
	margin-left:15px;
	margin-bottom:5px;
	padding:3px;
	text-align:right;
	font-size:90%;
	max-width:310px; }

[class^="blog-image-left"] p, div[class*=" blog-image-left"] p {
	margin-top:0px;
	margin-bottom:0px;
	margin-left:10px;;
	line-height:95%; }

[class^="blog-image-right"] p, div[class*=" blog-image-right"] p, .blog-image-centre p {
	margin-top:0px;
	margin-bottom:0px;
	margin-right:10px;;
	line-height:95%; }

[class^="blog-image-"] img, div[class*=" blog-image-"] img {
	max-width:100%;
	max-height:100%;
	margin-bottom:0px; }

.comments {
	margin-top:30px; }

blockquote {
	display:block;
	width:80%;
	font-style:italic;
	margin-left:7%; }

